# towersofhanoi

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  TODO.org
bash/: 1to2.sh  1to3.sh  colormap.py  feed_enter_key.sh  fromOneToThree.sh  fromOneToTwo.sh  fromThreeToOne.sh  fromThreeToTwo.sh  fromTwoToOne.sh  fromTwoToThree.sh  fromTwotoOne.sh  hanoi2.sh  hanoi3.sh  hanoi4.sh  hanoin.sh  oneLineAtATime.sh
bash/pipe/: hanoi1.sh  hanoi2.sh  hanoi3.sh  hanoi4.sh  hanoin.sh
docs/source/: byhand1.rst  byhand2.rst  byhand3.rst  byhand4.rst  conf.py  index.rst  intro.rst
entrypoint/: entrypoint.sh  format.sh  shell.sh
game/: pyproject.toml
game/src/hanoigame/: hanoigame.py  hanoimodel.py
game/tests/: test_hanoimodel.py
java/Hanoi/: settings.gradle.kts
java/Hanoi/gradle/wrapper/: gradle-wrapper.properties
java/Hanoi/src/main/java/org/example/: IterativeHanoi.java  Move.java
java/Hanoi/src/test/java/org/example/test/: IterativeHanoiTest.java
python/: hanoi.py  pyproject.toml  requirements.txt
python/src/: hanoi.py
python/src/hanoigame/: board_renderers.py  commands.py  engine.py  hanoi.xrc  hanoicli.py  hanoigame.py  hanoigui.py  hanoiiterative.py  hanoimodel.py  hanoirecursive.py  presenter.py  recipe.py
python/tests/: test_commands.py  test_hanoicli.py  test_presenter.py  test_recipe.py
tasks/: container-build-cleanup.md  image-export-import-targets.md
tasks/archive/2026/04/28/: NOTES.md
tasks/archive/2026/05/11/: PLAN.md
tasks/archive/2026/06/16/: image-export-import-targets.md
workbook/: Makefile
