[project]
name = "hanoigame"
version = "0.0.1"
authors = [{name="William Emerison Six", email="billsix@gmail.com"}]
description = "Towers of hanoi game"

dependencies = [
    "isort",
    "ruff",
    "pytest",
    "termcolor",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
testpaths = ["tests"]

[project.scripts]
hanoi = "hanoigame.hanoigame:main"