[project]
name = "hanoigame"
version = "0.0.1"
authors = [{name="William Emerison Six", email="billsix@gmail.com"}]
description = "Towers of hanoi game"

dependencies = [
    "pytest",
    "termcolor",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
testpaths = ["tests"]

[tools.ruff]
select = ['F401', 'F811', 'E402', 'I001', 'TID252', "F841", "E302", "E231", "B006", "B007", "B008", "UP007", "UP035", "S311", "S602", "T201"]
ignore = []

[tool.ruff.lint]
select = ["E", "F", "I"]

[project.scripts]
hanoi = "hanoigame.hanoigame:main"
